--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-204.5KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-224.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-291.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-307.3KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇫🇷 法国-832.0KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇨🇦 加拿大-322.6KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-249.4KB/s(Youtube:不良林), server: 89.238.165.226, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-316.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-932.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.25MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-204.5KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-272.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-322.6KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇦🇺 澳大利亚-354.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-320.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-400.5KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-338.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-712.0KB/s(Youtube:不良林), server: 8.214.33.158, port: 8088, type: ss, cipher: aes-256-gcm, password: songyu0504}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-307.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-249.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-316.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-272.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-354.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-712.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-307.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-249.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-316.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-272.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-354.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-712.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-307.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-249.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-316.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-272.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-354.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-712.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-307.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-249.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-316.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-272.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-354.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-712.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-307.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-249.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-316.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-272.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-354.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-712.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-307.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-249.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-316.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-272.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-354.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-712.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-224.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-291.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-307.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-832.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-249.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-316.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-932.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-272.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-354.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-400.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-712.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
