--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-425.7KB/s(Youtube:不良林), server: 103.253.43.228, port: 443, type: trojan, password: 48a55ebb-54f2-4757-8899-047933695eb2, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-519.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-177.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-400.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-763.4KB/s(Youtube:不良林), server: 120.233.150.132, port: 16108, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-389.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-3.01MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-325.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-339.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.72MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇳 中国-2.09MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇯🇵 日本-562.5KB/s(Youtube:不良林), server: 152.69.202.245, port: 50804, type: vmess, uuid: 7cf781da-d96d-461a-d50a-9af371693d81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-9.11MB/s(Youtube:不良林), server: 103.166.140.104, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.104}}
+  - {name: 🇺🇸 美国-541.4KB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
+  - {name: 🇨🇦 加拿大-762.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-3.12MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-425.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-519.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-177.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-400.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-425.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-519.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-177.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-400.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-425.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-519.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-177.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-400.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-425.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-425.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-519.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-177.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-400.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-425.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-519.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-177.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-400.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-425.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-519.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-177.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-400.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-425.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-519.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-177.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-400.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-763.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-389.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇫🇷 法国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-339.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-562.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
